// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultsTableColumns searchResultsTableColumns should generate the correct table columns 1`] = `
Array [
  Object {
    "dataKey": "dummyName",
    "name": "dummy",
    "visible": true,
  },
  Object {
    "dataKey": "observation_group.name",
    "name": "Observation",
    "visible": true,
  },
]
`;

exports[`SearchResultsTableColumns searchResultsTableColumns should generate the correct table columns 2`] = `
Array [
  Object {
    "dataKey": "dummyName",
    "name": "dummy",
    "visible": true,
  },
  Object {
    "dataKey": "observation_group.name",
    "name": "Observation",
    "visible": true,
  },
  Object {
    "dataKey": "instrument.name",
    "name": "Instrument",
    "visible": true,
  },
]
`;

exports[`SearchResultsTableColumns searchResultsTableColumns should generate the correct table columns 3`] = `
Array [
  Object {
    "dataKey": "dummyName",
    "name": "dummy",
    "visible": true,
  },
  Object {
    "dataKey": "observation_group.name",
    "name": "Observation",
    "visible": true,
  },
  Object {
    "dataKey": "position.ra",
    "format": [Function],
    "name": "Right Ascension",
    "visible": true,
  },
  Object {
    "dataKey": "position.dec",
    "format": [Function],
    "name": "Declination",
    "visible": true,
  },
  Object {
    "dataKey": "proposal.proposal_code",
    "name": "Proposal",
    "visible": true,
  },
  Object {
    "dataKey": "proposal.pi",
    "name": "PI",
    "visible": true,
  },
  Object {
    "dataKey": "telescope.name",
    "name": "Telescope",
    "visible": true,
    "width": 100,
  },
  Object {
    "dataKey": "instrument.name",
    "name": "Instrument",
    "visible": true,
  },
]
`;
